--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   get: ^4.6.6
   image_picker: ^1.1.2
+  firebase_core: ^3.8.1
 
 dev_dependencies:
   flutter_test:
