--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   image_picker: ^1.1.2
   firebase_core: ^3.8.1
   cloud_firestore: ^5.5.1
+  firebase_auth: ^5.3.4
 
 dev_dependencies:
   flutter_test:
