--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_core: ^3.8.1
   cloud_firestore: ^5.5.1
   firebase_auth: ^5.3.4
+  firebase_storage: ^12.3.7
 
 dev_dependencies:
   flutter_test:
