--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cloud_firestore: ^5.5.1
   firebase_auth: ^5.3.4
   firebase_storage: ^12.3.7
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
